--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,22 @@
+# ==============================================================================
+# Sistema de Recuperación de IVA - Dependencias Python
+# ==============================================================================
+
+# Descarga masiva SAT
 cfdiclient>=1.5.0
+requests>=2.28.0
 lxml>=4.9.0
-cryptography>=41.0.0
-requests>=2.31.0
+cryptography>=38.0.0
+
+# Procesamiento de datos (aplanamiento)
+pandas>=1.5.0
+numpy>=1.23.0
+tqdm>=4.64.0
+unidecode>=1.3.0
+psutil>=5.9.0
+
+# Opcional: Para interfaz gráfica
+# tkinter (incluido en Python estándar)
+
+# Opcional: Para formato Parquet (más eficiente que CSV)
+# pyarrow>=10.0.0
